@@ -1,4 +1,4 @@
-project.version=0.2.27-SNAPSHOT
+project.version=0.2.28-SNAPSHOT
 spring.profiles.active=dev
 spring.jackson.mapper.sort_properties_alphabetically=false
 wechat.path=/etc/todolist
